# myhtml4j

./: .gitignore  .gitmodules  README.org
cpp/: .gitignore  CMakeLists.txt
cpp/scripts/: attributes.gperf  convert_tags.pl  namespaces.gperf
cpp/src/: CMakeLists.txt  adapter.cpp  adapter.h  atoms.cpp  atoms.h  atoms_attributekeys.cpp  atoms_namespaces.cpp  javaexception.cpp  javaexception.h  myhtml4jnative.cpp  myhtml4jnative.h  myjni.cpp  myjni.h  traverser.h
cpp/test/: CMakeLists.txt  jniTest.cpp
java/: build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/github/foobar27/myhtml4j/: Attribute.java  Document.java  InternalError.java  Myhtml4j.java  Native.java  Parser.java  Sink.java  SinkVisitor.java  Visitor.java
java/src/main/java/com/github/foobar27/myhtml4j/atoms/: AttributeKey.java  AttributeKeys.java  Namespace.java  Namespaces.java  Tag.java  Tags.java
java/src/main/resources/: .gitignore
java/src/main/resources/lib/: .gitignore
java/src/test/java/com/github/foobar27/myhtml4j/: Html2textTest.java  Myhtml4jTest.java  ParserTest.java  TestUtils.java  TidyTest.java
java/src/test/java/com/github/foobar27/myhtml4j/example/: Comment.java  Element.java  Node.java  NodeSink.java  Text.java
